@@ -6,6 +6,8 @@ import org.springframework.core.io.Resource;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.security.GeneralSecurityException;
 import java.security.KeyFactory;
 import java.security.PublicKey;
@@ -14,15 +16,8 @@ import java.util.Base64;
 
 public class RsaKeyProvider {
     public static PublicKey loadPublicKey(String pemPath) {
-        Resource resource = new ClassPathResource(pemPath);
-
-        if (!resource.exists()) {
-            throw new IllegalStateException(
-                    "Public key resource not found in classpath: " + pemPath);
-        }
-
-        try (InputStream in = resource.getInputStream()) {
-            String key = new String(in.readAllBytes(), StandardCharsets.UTF_8);
+        try {
+            String key = new String(Files.readAllBytes(Paths.get(pemPath)));
             key = key
                     .replace("-----BEGIN PUBLIC KEY-----", "")
                     .replace("-----END PUBLIC KEY-----", "")
